--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 
 .slide-card:hover {
   transform: scale(1.03);
-  background-color: #f8f9fa;
+  background-color: #d09dad;
 }
 
 /* Modal container */
@@ -40,7 +40,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(240, 240, 240, 0.9);
+  background: rgba(229, 185, 185, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
